# helicopter-safety-boxes

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.sha256  Makefile  README.md  README_PATCH_NOTES.md  RELEASE_NOTES.md  apply_readme_patch.sh  install.sh  pytest.ini  requirements-dev.txt  requirements.txt  run_boxes_pid_academic_parameter_study.py  run_boxes_pid_parameter_study.py  run_checks.sh  run_poisson_cbf_contingency_landing_study.py  weekly_progress_poisson_cbf_figures.py
cbf_safety_box/: CHANGELOG_CONTINGENCY_HJR.md  README.md  pyproject.toml
cbf_safety_box/cbf_safety_box/: __init__.py  api.py  config.py  result.py  state.py
cbf_safety_box/configs/: acceleration_hocbf.yaml  backstepping.yaml  solver_comparison.yaml  velocity_cbf.yaml
cbf_safety_box/docs/: API.md  ARCHITECTURE.md  CONNECTION_WITH_POISSON_BOX.md  HOW_TO_EDIT.md  RUN_GUIDE.md  THEORY.md
cbf_safety_box/examples/: run_acceleration_hocbf_basic.py  run_backstepping_basic.py  run_compare_qp_solvers.py  run_connect_with_poisson_box_2d.py  run_connect_with_poisson_box_3d.py  run_velocity_cbf_basic.py
cbf_safety_box/tests/: test_acceleration_hocbf.py  test_backstepping.py  test_combinatorial_contingency.py  test_control_limits.py  test_poisson_adapter.py  test_qp_solvers.py  test_reachability_constraints.py  test_velocity_cbf.py
clf_safety_box/: README.md  pyproject.toml
clf_safety_box/examples/: double_integrator_clf.py
contingency_safety_box/: README.md  pyproject.toml
contingency_safety_box/examples/: r_out_of_p.py
poisson_safety_box/: README.md  pyproject.toml
poisson_safety_box/configs/: basic_2d.yaml  basic_3d.yaml  solver_comparison.yaml
poisson_safety_box/docs/: API.md  ARCHITECTURE.md  HOW_TO_EDIT.md  RUN_GUIDE.md  THEORY.md
poisson_safety_box/examples/: run_basic_2d.py  run_basic_3d.py  run_compare_forcing.py  run_compare_solvers.py  run_instructive.py
poisson_safety_box/poisson_safety_box/: __init__.py  api.py  config.py  result.py
poisson_safety_box/tests/: test_api.py  test_derivatives.py  test_forcing.py  test_masks.py  test_solvers.py
safety_box_core/: README.md  pyproject.toml
safety_box_core/examples/: contracts.py
vision_poisson_experiments/: CHANGELOG_CONTINGENCY_HJR.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_CONTINGENCY_HJR.md  Makefile  README.md  REPOSITORY_TREE.txt  RUN_CONTINGENCY_HJR.md  fix_live_stream_refresh.py  pyproject.toml  requirements.txt
vision_poisson_experiments/01_static_image_poisson_cbf/: README.md  calibration_synthetic.json  config.yaml  config_smoke.yaml  config_synthetic.yaml  run_experiment.py
vision_poisson_experiments/02_phone_stream_poisson_realtime/: README.md  config.yaml  config_contingency_synthetic.yaml  config_synthetic.yaml  run_experiment.py
vision_poisson_experiments/common/: __init__.py  calibration.py  cbf_demo.py  contingency_live_pipeline.py  contingency_live_pipeline.py.backup_20260716_143639  contingency_planner.py  contingency_visualization.py  coordinates.py  discrete_safety.py  external_boxes.py  hj_reachability.py  live_pipeline.py  live_pipeline.py.backup_20260716_140917  (+14 more)
(+423 files in other folders)
