[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clf-safety-box"
version = "0.1.0"
description = "Local quadratic CLF construction and ROA certificates"
requires-python = ">=3.10"
authors = [{name = "Juan Esteban Beron"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "safety-box-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
