[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contingency-safety-box"
version = "0.1.0"
description = "r-out-of-p combinatorial contingency certificate box"
requires-python = ">=3.10"
authors = [{name = "Juan Esteban Beron"}]
dependencies = [
  "numpy>=1.26",
  "safety-box-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
