[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poisson-safety-box"
version = "0.1.0"
description = "Poisson safety-field synthesis from occupancy data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7", "PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["poisson_safety_box*"]
